Bug 91652 - PDF Options not remembered
Summary: PDF Options not remembered
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: Other Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords: bibisectRequest, regression
: 91455 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-05-26 21:38 UTC by Cor Nouws
Modified: 2016-10-25 19:20 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2015-05-26 21:38:33 UTC
Writer document
File > Export as PDF
Check e.g. Export Bookmark
OK

Again File > Export as PDF
 > Export Bookmark not checked.
Comment 1 Cor Nouws 2015-05-26 21:39:03 UTC
Was OK in previous versions..
Comment 2 raal 2015-05-27 13:47:04 UTC
I can confirm with Version: 5.1.0.0.alpha1+
Build ID: b9630867d17c01ec41f6461b1e96288f3932248c
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-05-25_00:46:48
Comment 3 Michael Meeks 2015-05-27 19:54:38 UTC
I'll take this one; looks like a vcl/ FilterConfig not being cleaned up & written back properly.
Comment 4 Michael Meeks 2015-05-28 08:17:40 UTC
*** Bug 91455 has been marked as a duplicate of this bug. ***
Comment 5 Michael Meeks 2015-05-28 13:11:51 UTC
Fix pushed to gerrit - thanks for the report :-)
Comment 6 Cor Nouws 2015-05-28 13:56:44 UTC
(In reply to Michael Meeks from comment #5)
> Fix pushed to gerrit - thanks for the report :-)

Thanks for fixing - two birds with one stone ?
Comment 7 Commit Notification 2015-05-28 16:06:36 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fee29fde64567e91c69a350a787b6aefadfb71af

tdf#91652 - store PDF FilterConfigItem options in dispose.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-06-01 08:37:15 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=13da15429b670d78174d7da605058a2e4636f297&h=libreoffice-5-0

tdf#91652 - store PDF FilterConfigItem options in dispose.

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Cor Nouws 2015-06-01 19:27:58 UTC
(In reply to Commit Notification from comment #8)
> Michael Meeks committed a patch related to this issue.

thanks a lot :)
Comment 10 raal 2015-06-02 04:56:01 UTC
Verified with Version: 5.1.0.0.alpha1+
Build ID: 1a8e9dae32997bf199dbd192058fcd8f187ddc49
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-05-31_03:57:11
Comment 11 Robinson Tryon (qubit) 2015-12-17 09:12:47 UTC Comment hidden (obsolete)