tdf#91652 - store PDF FilterConfigItem options in dispose.

Change-Id: I808aeab8fdac35330de24970b873f49e22c52c6a
Reviewed-on: https://gerrit.libreoffice.org/15946
Tested-by: Jenkins <ci@libreoffice.org>
Tested-by: Michael Meeks <michael.meeks@collabora.com>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
(cherry picked from commit fee29fde64567e91c69a350a787b6aefadfb71af)